Keep CribSheet instructions for Hebrew, Fix Scroll Overflow Issue, Change Selected Annotation Color (#94)

--- a/src/styles/components/dialog.styl
+++ b/src/styles/components/dialog.styl
@@ -29,7 +29,7 @@
   .dialog-content
     min-height: 100%
     flex: 0 1 auto
-    overflow: visible
+    overflow: auto
 
     &__header
       background: $bisque  //Prevent scrolling content from appearing behind the header. TODO: Perhaps a better solution is to not make this position:absolute.
